# simple-qt-player

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: audioplayer.h  mainwindow.h
src/: audioplayer.cpp  main.cpp  mainwindow.cpp
